[project]
name = "thor"
dynamic = ["version"]
authors = [
    {name="Mark Nottingham", email="mnot@mnot.net"}
]
description = "Simple Event-Driven IO for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

dependencies = [
    "certifi",
    "dnspython"
]

[project.optional-dependencies]
dev = ["mypy", "black", "isort", "pylint", "pytest", "pytest-xdist",
    "py", "pytest-md", "validate-pyproject", "build"]
# See https://github.com/kevlened/pytest-parallel/issues/118

[project.urls]
homepage = "https://github.com/mnot/thor/"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "thor.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["thor", "thor.*"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
SHORTNAME = ["py.typed"]
