[metadata]
name = thor
version = attr: thor.__version__
author = Mark Nottingham
author_email = mnot@mnot.net
description = Simple Event-Driven IO for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mnot/thor/
project_urls =
    Bug Tracker = https://github.com/mnot/thor/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Operating System :: POSIX
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: Proxy Servers
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    thor = thor
packages = find:
python_requires = >=3.6

[options.extras_require]
systemd = csystemd
dev = build; twine; mypy; black; pytest; pytest-md; mytest-parallel; pylint
